# RedCaChe

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  category_presets.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py
backend/app/crawler/: README.md  browser.py  extraction.py  importer.py  playwright_profile.md  selectors.py
backend/app/routers/: config.py  crawler.py  export_obsidian.py  import_mock.py  posts.py  remove_check.py  review.py
backend/app/services/: ai_base.py  ai_mock.py  backup_service.py  classifier.py  config_service.py  daily_fetch.py  mock_importer.py  obsidian_exporter.py  review_windows.py  summarizer.py
backend/data/: sample_posts.json
backend/tests/: test_ai_mock.py  test_backfill_titles.py  test_config_categories.py  test_crawler_api.py  test_crawler_extraction.py  test_daily_export.py  test_daily_fetch.py  test_import_open_url_refresh.py  test_mock_import.py  test_post_category.py  test_remove_check.py  test_review_windows.py  test_schema.py  test_unfavorite_collect.py
docs/: DATA_MODEL.md  PRODUCT_SPEC.md  ROADMAP.md  SAFETY_AND_COMPLIANCE.md
extension/: README.md  background.js  content-script.js  dashboard.html  dashboard.js  manifest.json  popup.html  popup.js
extension/tests/: lib.test.mjs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  CategoriesContext.jsx  api.js  categories.js  i18n.jsx  main.jsx  styles.css
frontend/tests/: postLinks.test.mjs
scripts/: dev.sh
(+18 files in other folders)
